2018-04-20  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* configure.zcml: Added linkjson view; which calls returns not
	HTML but a json string.

	* views.py (LinkJson): Add LinkJson class. Its' a subclass of
	LinkView. Its only purpose is to redefine the __call__ special
	method. 

	* configure.zcml: Added linkview page template.

	* views.py: Added missing function docstrings.

2018-04-19  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* configure.zcml: Added the zcml for linkview

	* views.py (LinkView): Added LinkView class

2017-03-24  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* views.py (QuotaView.get_objects): Removed local_roles.
	They are still there in the local_roles branch.

2017-02-17  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* views.py (QuotaView.get_objects): Append object review state to list of results.
	(QuotaView.get_objects): Correct flake8 complaints.
	(QuotaView.get_objects): Append object local roles to list of results.

2015-04-14  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* views.py: Initial commit.